--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "bootstrap": "^5.3.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
